# binup

./: CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: archive.rs  cache.rs  cli.rs  codeberg.rs  config.rs  github.rs  installer.rs  lib.rs  main.rs  types.rs  uninstaller.rs  version.rs
src/apps/: app_trait.rs  apps_factory.rs  apps_registry.rs  aqua.rs  ast_grep.rs  atuin.rs  bat.rs  caddy.rs  carapace.rs  chezmoi.rs  d4s.rs  dasel.rs  delta.rs  difftastic.rs  dock_mate.rs  dry.rs  dust.rs  eza.rs  fd_find.rs  fnm.rs  fx.rs  fzf.rs  gitleaks.rs  go.rs  gojq.rs  gonzo.rs  jid.rs  jq.rs  jqp.rs  lazy_journal.rs  lazydocker.rs  lazygit.rs  mdbook.rs  mergiraf.rs  mise.rs  mod.rs  neovide.rs  rclone.rs  restish.rs  ripgrep.rs  (+9 more)
src/apps/containers/: d4s.rs  dock_mate.rs  dry.rs  lazydocker.rs  mod.rs
src/apps/data/: dasel.rs  fx.rs  gojq.rs  jid.rs  jq.rs  jqp.rs  mod.rs  qsv.rs  qsv_all.rs  rsv.rs  xq.rs  yq.rs
src/apps/databases/: mod.rs  pdot.rs  pgplan.rs  squix.rs
src/apps/dev_envs/: aqua.rs  fnm.rs  go.rs  mise.rs  mod.rs  uv.rs
src/apps/dev_tools/: ast_grep.rs  mdbook.rs  mod.rs  neovide.rs  rust_analyzer.rs  stylua.rs
src/apps/files/: bat.rs  dust.rs  eza.rs  fd_find.rs  mod.rs  ripgrep.rs  sd_edit.rs  yazi.rs
src/apps/git/: delta.rs  difftastic.rs  gitleaks.rs  lazygit.rs  mergiraf.rs  mod.rs
src/apps/http/: caddy.rs  mod.rs  restish.rs  xh.rs
src/apps/logs/: gonzo.rs  (+2 more)
src/cli/: helpers.rs  main_command.rs  mod.rs  sub_commands.rs
src/clients/: codeberg.rs  github.rs  gitlab.rs  mod.rs
xtask/src/: main.rs
(+11 files in other folders)
