[package]
name = "rutils-downloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rutils-downloader"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
zip = "2"
ar = "0.9"
xz2 = "0.1"
bzip2 = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
regex = "1"
once_cell = "1"
rpassword = "7"
